[gd_scene load_steps=14 format=3 uid="uid://cgfpsu65jdvkn"]

[ext_resource type="Script" path="res://Scene/SceneManager.gd" id="1_dqd38"]
[ext_resource type="PackedScene" uid="uid://ce846fjqu4b00" path="res://Scene/Main.tscn" id="2_2ha5a"]
[ext_resource type="Texture2D" uid="uid://nb2h8ypvnns5" path="res://Art/Background/Menu.png" id="3_2arfx"]
[ext_resource type="Script" path="res://Scene/hand.gd" id="4_okp6y"]
[ext_resource type="Theme" uid="uid://bwti3w2ekyd6x" path="res://Theme/Default.tres" id="5_ues6m"]
[ext_resource type="FontVariation" uid="uid://c0gi7x6ivyn1o" path="res://Theme/PixelFont.tres" id="6_1c70g"]
[ext_resource type="Script" path="res://Scene/bet_sliderOnline.gd" id="7_drtyf"]
[ext_resource type="Texture2D" uid="uid://b81jns6s00era" path="res://Art/Background/PokerChip.png" id="9_bfwjn"]
[ext_resource type="Shader" path="res://Shader/VHSShader.gdshader" id="9_xdjl1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye7xc"]
content_margin_left = 10.0
bg_color = Color(0.00237129, 0.209337, 0.323004, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6bq8"]
bg_color = Color(0.262074, 0.595719, 0.856455, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lun7i"]
shader = ExtResource("9_xdjl1")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.094
shader_parameter/scanlines_width = 0.051
shader_parameter/grille_opacity = 0.069
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 2.037
shader_parameter/roll_variation = 0.756
shader_parameter/distort_intensity = 0.004
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00699995
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.08
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3lf2v"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("../PlayedCards:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="GameManager" type="Node2D"]
script = ExtResource("1_dqd38")
PlayerScene = ExtResource("2_2ha5a")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("3_2arfx")

[node name="EnemyHand" type="Node2D" parent="."]

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_okp6y")

[node name="PlayedCards" type="Node2D" parent="."]

[node name="ClickedCards" type="Node2D" parent="."]
script = ExtResource("4_okp6y")

[node name="Deck" type="Node2D" parent="."]

[node name="UI" type="Node2D" parent="."]

[node name="Bet" type="Button" parent="UI"]
offset_left = 20.0
offset_top = 469.0
offset_right = 219.0
offset_bottom = 526.0
theme = ExtResource("5_ues6m")
theme_override_fonts/font = ExtResource("6_1c70g")
theme_override_font_sizes/font_size = 60
text = "Bet"

[node name="BetSlider" type="VSlider" parent="UI"]
offset_left = 95.0
offset_top = 246.0
offset_right = 134.0
offset_bottom = 402.0
theme = ExtResource("5_ues6m")
theme_override_styles/slider = SubResource("StyleBoxFlat_ye7xc")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_s6bq8")
max_value = 50000.0
step = 5.0
script = ExtResource("7_drtyf")

[node name="ChipCount" type="Label" parent="UI"]
offset_left = 778.0
offset_top = 463.0
offset_right = 901.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="BetAmount" type="Label" parent="UI"]
offset_left = 21.0
offset_top = 409.0
offset_right = 216.0
offset_bottom = 469.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScore" type="Label" parent="UI"]
visible = false
offset_left = 742.0
offset_top = 227.0
offset_right = 947.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyChipCount" type="Label" parent="UI"]
offset_left = 66.0
offset_top = 21.0
offset_right = 198.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="PokerChip" type="Sprite2D" parent="UI"]
position = Vector2(747, 491)
scale = Vector2(1.03125, 0.96875)
texture = ExtResource("9_bfwjn")

[node name="EnemyChip" type="Sprite2D" parent="UI"]
position = Vector2(224, 53)
scale = Vector2(1.06348, 0.938477)
texture = ExtResource("9_bfwjn")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_lun7i")
offset_right = 958.0
offset_bottom = 541.0
mouse_filter = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath("../Deck")
replication_config = SubResource("SceneReplicationConfig_3lf2v")

[connection signal="pressed" from="UI/Bet" to="." method="_on_bet_pressed"]
[connection signal="value_changed" from="UI/BetSlider" to="." method="_on_bet_slider_value_changed"]
